updates to scenario

--- a/wisccc/templates/wisccc/wisc_cc_scenario.html
+++ b/wisccc/templates/wisccc/wisc_cc_scenario.html
@@ -17,7 +17,32 @@
         <div class="card">
             <div class="card-body">
                 <h5>Scenarios</h5>
+                <div>
+                    <p>Todos</p>
+                    <ul>
+                        <s>
+                            <li>Set up modal</li>
+                        </s>
+                        <s>
+                            <li>Build erosion control sorter and filterer</li>
+                        </s>
+                        <s>
+                            <li>Build nutrient scavenger sorter and filterer</li>
+                        </s>
+                        <s>
+                            <li>Build n credits sorter and filterer</li>
+                        </s>
+                        <li>Tidy cards - brief description and county</li>
+                        <li>Make pretty modal of field details</li>
+                        <li>Build soil type filter</li>
+                        <li>Build geography filter</li>
+                        <li>Build weed suppression sorter and filterer</li>
+                        <li>Build erosion control sorter and filterer</li>
+                        <li>Build grazing fall sorter and filterer</li>
+                        <li>Build grazing spring sorter and filterer</li>
 
+                    </ul>
+                </div>
                 <select id="ScenarioSelector" class="selectize-control single selectize-input">
                     <option value="erosion_control">Erosion control</option>
                     <option value="nutrient_scavenger">Nutrient scavenger</option>
